test: add preview deployment test messages (#13)

--- a/turbo/apps/docs/content/docs/index.mdx
+++ b/turbo/apps/docs/content/docs/index.mdx
@@ -5,6 +5,8 @@ description: Your first document
 
 Welcome to the docs! You can start writing documents in `/content/docs`.
 
+> **Testing Preview Deployments**: This change will trigger a Vercel preview deployment with an isolated Neon database branch.
+
 ## What is Next?
 
 <Cards>
